--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
  <!DOCTYPE html>
- <html> 
+ <html lang = "en-us"> 
  <head>
  <meta charset="utf-8">
- <meta name="viewport">
  <title>FinalProject</title>
  <link href="https://getbootstrap.com/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet">
  <link href="https://getbootstrap.com/docs/4.4/examples/cover/cover.css" rel="stylesheet">
@@ -19,16 +18,16 @@
       <nav class="nav nav-masthead justify-content-center">
 		
         <a class="nav-link" href="https://www.w3schools.com/" target="_blank">w3schools</a>
-		<a class="nav-link" href="https://www.codecademy.com/"target="_blank">Code Academy</a>
-		<a class="nav-link" href=""target="_blank">nu</a>
-		<a class="nav-link" href=""target="_blank">wave</a>
+		<a class="nav-link" href="https://www.codecademy.com/" target="_blank">Code Academy</a>
+		<a class="nav-link" href="" target="_blank">nu</a>
+		<a class="nav-link" href="" target="_blank">wave</a>
 		
 		
      </nav>
     </div>
   </header>
 
-  <main role="main" class="inner cover">
+  <main  class="inner cover">
     <h1 class="cover-heading">Web Dev Profile</h1>
 	<!--Profile Card -->
 	
@@ -44,7 +43,7 @@
   <footer class="mastfoot mt-auto">
     <div class="inner">
       <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap Baskin</a>, by <a href="#">@ninjaFocus</a>.</p>
-	  <a class="nav-link" href="#"target="_blank"></a>
+	  <a class="nav-link" href="#" target="_blank"></a>
     </div>
   </footer>
 </div>
