--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		
         <a class="nav-link" href="https://www.w3schools.com/" target="_blank">w3schools</a>
 		<a class="nav-link" href="https://www.codecademy.com/" target="_blank">Code Academy</a>
-		<a class="nav-link" href="" target="_blank">nu</a>
+		<a class="nav-link" href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fdelilahhowell.github.io%2FFinalProject%2Findex.html" target="_blank">nu</a>
 		<a class="nav-link" href="" target="_blank">wave</a>
 		
 		
