--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="nav-link" href="https://www.w3schools.com/" target="_blank">w3schools</a>
 		<a class="nav-link" href="https://www.codecademy.com/" target="_blank">Code Academy</a>
 		<a class="nav-link" href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fdelilahhowell.github.io%2FFinalProject%2Findex.html" target="_blank">nu</a>
-		<a class="nav-link" href="" target="_blank">wave</a>
+		<a class="nav-link" href="https://wave.webaim.org/report#/https://delilahhowell.github.io/FinalProject/" target="_blank">wave</a>
 		
 		
      </nav>
@@ -43,7 +43,7 @@
   <footer class="mastfoot mt-auto">
     <div class="inner">
       <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap Baskin</a>, by <a href="#">@ninjaFocus</a>.</p>
-	  <a class="nav-link" href="#" target="_blank"></a>
+	 
     </div>
   </footer>
 </div>
